[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://core/ui/vapor_ui/qam/performance_menu.gd" id="1_r31yj"]
[ext_resource type="PackedScene" uid="uid://cemxrvvjgm4g" path="res://core/ui/components/slider.tscn" id="1_yptsc"]
[ext_resource type="PackedScene" uid="uid://8m20p2s0v5gb" path="res://core/systems/input/focus_group.tscn" id="2_my16i"]
[ext_resource type="PackedScene" uid="uid://d1qb7euwlu7bh" path="res://core/ui/components/toggle.tscn" id="2_wyqhe"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="3_6060o"]
[ext_resource type="Resource" uid="uid://dpc1o781f43ef" path="res://core/ui/card_ui/qam/quick_access_menu_focus.tres" id="3_yuewb"]

[node name="PerformanceMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r31yj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FocusGroup" parent="VBoxContainer" node_paths=PackedStringArray("current_focus") instance=ExtResource("2_my16i")]
current_focus = NodePath("../MangoAppSlider")
focus_stack = ExtResource("3_yuewb")

[node name="SectionLabel" parent="VBoxContainer" instance=ExtResource("3_6060o")]
layout_mode = 2
text = "Performance"

[node name="MangoAppSlider" parent="VBoxContainer" instance=ExtResource("1_yptsc")]
unique_name_in_owner = true
layout_mode = 2
text = "Performance Overlay"
max_value = 4.0
tick_count = 5

[node name="PerGameToggle" parent="VBoxContainer" instance=ExtResource("2_wyqhe")]
layout_mode = 2
text = "Per-game Profile"

[node name="FramerateLimitSlider" parent="VBoxContainer" instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
text = "FPS Limit"

[node name="RefreshRateSlider" parent="VBoxContainer" instance=ExtResource("1_yptsc")]
visible = false
layout_mode = 2
text = "Refresh Rate"
